archive/logs/batch-uncertainty-domain-eval-20260129-142823.log
  File "/home/anicka/karma-electric/scripts/batch_baseline.py", line 273
    """Load all baseline results and generate summary statistics."""
                                                                 ^
SyntaxError: unterminated triple-quoted string literal (detected at line 401)
